--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/index.css" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N3JJXGVV5V"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-N3JJXGVV5V');
+    </script>
   </head>
   <body>
     <header>
