--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         </div>
         <div class="buttons">
           <a target="_blank" href="https://t.me/virtlord">
-            <button><b>КУПИТЬ</b></button>
+            <button><b>КУПИТЬ/ПРОДАТЬ</b></button>
           </a>
-          <a target="_blank" href="https://t.me/razmunist">
-            <button><b>ПРОДАТЬ</b></button>
+          <a target="_blank" href="https://t.me/VirtLordBot">
+            <button><b>TG BOT</b></button>
           </a>
         </div>
       </div>
