--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="buttons">
           <a target="_blank" href="https://t.me/virtlord">
-            <button><b>КУПИТЬ/ПРОДАТЬ</b></button>
+            <button><b>КУПИТЬ ПРОДАТЬ</b></button>
           </a>
           <a target="_blank" href="https://t.me/VirtLordBot">
             <button><b>TG BOT</b></button>
